# rust-api

./: Cargo.toml  README.md  build.rs
migrations/TIMESTAMP_create_users/: up.sql
src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
