[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-web-codegen = "4.2.2"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8.10"
env_logger = "0.10.0"

[build-dependencies]
vcpkg = "0.2.15"

[package.metadata.vcpkg]
dependencies = ["libpq"]
git = false